Added audio files from masters thesis

--- a/_posts/2020-03-09-research.md
+++ b/_posts/2020-03-09-research.md
@@ -23,19 +23,124 @@ Sound Files:
   <iframe
    frameborder="0"
    width="400"
-   height="200"
+   height="50"
    src="https://drive.google.com/file/d/1pY11312ztj0FaYW618qBnsZEOUJpqc2g/preview?usp=sharing">
+  </iframe>
+  
+  * Itakura-Saito Divergence
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1fCR-2wMYAzYr9NM_hgNmKlFNHNdetN_9/preview?usp=sharing">
   </iframe>
   
   * Kullback-Leibler Divergence
   <iframe
    frameborder="0"
    width="400"
-   height="200"
-   src="https://drive.google.com/file/d/1fCR-2wMYAzYr9NM_hgNmKlFNHNdetN_9/preview?usp=sharing">
+   height="50"
+   src="https://drive.google.com/file/d/1ZwC85tJgLEPP2AbQ4lwkz71kdG5X8Aws/preview?usp=sharing">
+  </iframe>
+  
+* Male Talker, Conversation "babble" noise
+  * Reference
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1vHdsuW4DMt0HEXY0oMK0O7SpiL4DRsNX/preview?usp=sharing">
+  </iframe>
+  
+  * Euclidian Distance
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1rAn0_HM8fpSkvVhobKK4wd2S3qKIipu6/preview?usp=sharing">
   </iframe>
   
   * Itakura-Saito Divergence
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1IPWeFmIzA9l7nJ04MSYb9OBKyxSucm9B/preview?usp=sharing">
+  </iframe>
+  
+  * Kullback-Leibler Divergence
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1sRMl5NyrFlUpR5uMlXtaMDiEHMEF862E/preview?usp=sharing">
+  </iframe>
+  
+* Female Talker, Speech Shaped Noise
+  * Reference
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1pwwXIRxwojCFakpQd2P2cCVl6HO2Ch8s/preview?usp=sharing">
+  </iframe>
+  
+  * Euclidian Distance
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1mzGEgY3CGWAAcTYmSDsIuAZF-L-zQ30I/preview?usp=sharing">
+  </iframe>
+  
+  * Itakura-Saito Divergence
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1wIuqHP2vTjkLWCPuN04GaxctzsQ9eGQ2/preview?usp=sharing">
+  </iframe>
+  
+  * Kullback-Leibler Divergence
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1j1phNYFSeQX2nWkc8SztK7A8QKHOCDMN/preview?usp=sharing">
+  </iframe>
+  
+* Female Talker, Conversation "babble" noise
+  * Reference
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1xf4ElqGsnfxGG1wHrlE9jZ2r78ahn2H8/preview?usp=sharing">
+  </iframe>
+  
+  * Euclidian Distance
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1saiQFQM0rDEy_0FD_hCRqi2MqxamaELB/preview?usp=sharing">
+  </iframe>
+  
+  * Itakura-Saito Divergence
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1OKxE1FYaOeV-XRP1IHzUK4b7NkzHr5HL/preview?usp=sharing">
+  </iframe>
+  
+  * Kullback-Leibler Divergence
+  <iframe
+   frameborder="0"
+   width="400"
+   height="50"
+   src="https://drive.google.com/file/d/1y24bTUJx4IZtqrA7wNWp-SdNihCigOZO/preview?usp=sharing">
+  </iframe>
   
 
 * Detection of the Effect of Window Duration in an audio Source Separation Paradigm
