Updated header layouts

--- a/_posts/2020-03-09-research.md
+++ b/_posts/2020-03-09-research.md
@@ -12,7 +12,7 @@ date: 2020-03-09 06:03:00 -0000
 
 ### Audio Files:
 #### Male Talker, Speech Shaped Noise
-* Reference
+  * Reference
   <iframe
    frameborder="0"
    width="400"
@@ -21,7 +21,7 @@ date: 2020-03-09 06:03:00 -0000
   </iframe>
 
 
-* Euclidian Distance
+  * Euclidian Distance
   <iframe
    frameborder="0"
    width="400"
@@ -30,7 +30,7 @@ date: 2020-03-09 06:03:00 -0000
   </iframe>
   
   
-* Itakura-Saito Divergence
+  * Itakura-Saito Divergence
   <iframe
    frameborder="0"
    width="400"
@@ -39,7 +39,7 @@ date: 2020-03-09 06:03:00 -0000
   </iframe>
   
   
-* Kullback-Leibler Divergence
+  * Kullback-Leibler Divergence
   <iframe
    frameborder="0"
    width="400"
@@ -48,7 +48,7 @@ date: 2020-03-09 06:03:00 -0000
   </iframe>
   
   
-* Male Talker, Conversation "babble" noise
+#### Male Talker, Conversation "babble" noise
   * Reference
   <iframe
    frameborder="0"
@@ -56,6 +56,7 @@ date: 2020-03-09 06:03:00 -0000
    height="50"
    src="https://drive.google.com/file/d/1vHdsuW4DMt0HEXY0oMK0O7SpiL4DRsNX/preview?usp=sharing">
   </iframe>
+  
   
   * Euclidian Distance
   <iframe
@@ -65,6 +66,7 @@ date: 2020-03-09 06:03:00 -0000
    src="https://drive.google.com/file/d/1rAn0_HM8fpSkvVhobKK4wd2S3qKIipu6/preview?usp=sharing">
   </iframe>
   
+  
   * Itakura-Saito Divergence
   <iframe
    frameborder="0"
@@ -72,6 +74,7 @@ date: 2020-03-09 06:03:00 -0000
    height="50"
    src="https://drive.google.com/file/d/1IPWeFmIzA9l7nJ04MSYb9OBKyxSucm9B/preview?usp=sharing">
   </iframe>
+  
   
   * Kullback-Leibler Divergence
   <iframe
@@ -81,7 +84,8 @@ date: 2020-03-09 06:03:00 -0000
    src="https://drive.google.com/file/d/1sRMl5NyrFlUpR5uMlXtaMDiEHMEF862E/preview?usp=sharing">
   </iframe>
   
-* Female Talker, Speech Shaped Noise
+  
+#### Female Talker, Speech Shaped Noise
   * Reference
   <iframe
    frameborder="0"
@@ -89,6 +93,7 @@ date: 2020-03-09 06:03:00 -0000
    height="50"
    src="https://drive.google.com/file/d/1pwwXIRxwojCFakpQd2P2cCVl6HO2Ch8s/preview?usp=sharing">
   </iframe>
+  
   
   * Euclidian Distance
   <iframe
@@ -98,6 +103,7 @@ date: 2020-03-09 06:03:00 -0000
    src="https://drive.google.com/file/d/1mzGEgY3CGWAAcTYmSDsIuAZF-L-zQ30I/preview?usp=sharing">
   </iframe>
   
+  
   * Itakura-Saito Divergence
   <iframe
    frameborder="0"
@@ -105,6 +111,7 @@ date: 2020-03-09 06:03:00 -0000
    height="50"
    src="https://drive.google.com/file/d/1wIuqHP2vTjkLWCPuN04GaxctzsQ9eGQ2/preview?usp=sharing">
   </iframe>
+  
   
   * Kullback-Leibler Divergence
   <iframe
@@ -114,7 +121,8 @@ date: 2020-03-09 06:03:00 -0000
    src="https://drive.google.com/file/d/1j1phNYFSeQX2nWkc8SztK7A8QKHOCDMN/preview?usp=sharing">
   </iframe>
   
-* Female Talker, Conversation "babble" noise
+  
+#### Female Talker, Conversation "babble" noise
   * Reference
   <iframe
    frameborder="0"
@@ -122,6 +130,7 @@ date: 2020-03-09 06:03:00 -0000
    height="50"
    src="https://drive.google.com/file/d/1xf4ElqGsnfxGG1wHrlE9jZ2r78ahn2H8/preview?usp=sharing">
   </iframe>
+  
   
   * Euclidian Distance
   <iframe
@@ -131,6 +140,7 @@ date: 2020-03-09 06:03:00 -0000
    src="https://drive.google.com/file/d/1saiQFQM0rDEy_0FD_hCRqi2MqxamaELB/preview?usp=sharing">
   </iframe>
   
+  
   * Itakura-Saito Divergence
   <iframe
    frameborder="0"
@@ -138,6 +148,7 @@ date: 2020-03-09 06:03:00 -0000
    height="50"
    src="https://drive.google.com/file/d/1OKxE1FYaOeV-XRP1IHzUK4b7NkzHr5HL/preview?usp=sharing">
   </iframe>
+  
   
   * Kullback-Leibler Divergence
   <iframe
@@ -148,6 +159,6 @@ date: 2020-03-09 06:03:00 -0000
   </iframe>
   
 
-* Detection of the Effect of Window Duration in an audio Source Separation Paradigm
+## Detection of the Effect of Window Duration in an audio Source Separation Paradigm
   * R. Miller, E. Tarr, & W. Bulla, 147th AES Convention, New York, NY, USA (Oct 2019)
   * [Full Paper](http://www.aes.org/e-lib/browse.cfm?elib=20625)
