--- a/_posts/2020-03-09-research.md
+++ b/_posts/2020-03-09-research.md
@@ -9,7 +9,7 @@
 ### MATLAB Code
 Code was modified from N. Bryan, D. Sun and E. Cho, "Extensions and interpretations to non-negative matrix factorization," in Single-Channel Source Separation Tutorial Mini-Series, Stanford, CA, USA, 2013. 
 
-* Main Script: 
+* Main Script: {{ site.baseurl }}/matlabCode/mainScript_Published.pdf
 
 ### Audio Files - Experiment 2, Effect of Cost Function on Residual Noise Level
 ---
